2008-01-30  Bastien Nocera  <hadess@hadess.net>

	* bindings/vala/totem.vapi:
	* configure.in: Fix compilation with vala 0.1.6, spotted
	by Götz Waschk <waschk@mandriva.org> (Closes: #512920)

2008-01-27  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/tracker/totem-tracker-widget.c:
	(totem_tracker_widget_class_init), (populate_result),
	(get_search_count), (search_results_cb), (do_search), (go_next),
	(go_previous), (page_selector_value_changed_cb), (new_search),
	(init_result_list), (initialize_list_store),
	(totem_tracker_widget_init), (totem_tracker_widget_new):
	* src/plugins/tracker/totem-tracker.c: (impl_activate):
	* src/plugins/tracker/tracker.totem-plugin.in: HIGify the Tracker
	plugin, following suggestions made by Kirk Bridger. (Closes: #512268)

2008-01-26  Philip Withnall  <pwithnall@svn.gnome.org>

	Update svn:ignore properties.

============ Version 2.21.91

2008-01-25  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.91

2008-01-25  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in:
	* data/totem.ui:
	* src/plugins/screensaver/totem-screensaver.c:
	(totem_screensaver_update_from_state),
	(lock_screensaver_on_audio_changed_cb), (impl_activate),
	(impl_deactivate):
	* src/totem-preferences.c: (checkbutton4_toggled_cb),
	(lock_screensaver_on_audio_changed_cb), (totem_setup_preferences):
	Lock the screensaver when only audio is playing, but allow the
	user to override that, to avoid monitor-powered speakers being
	turned off

	Based on patch by Patrick Hulin <patrick.hulin@gmail.com>

	(Closes: #481080)

2008-01-21  Bastien Nocera  <hadess@hadess.net>

	Patch from Patrick Hulin <patrick.hulin@gmail.com>

	* src/totem-object.c: (totem_object_class_init),
	(totem_object_set_property), (totem_object_get_property):
	Add current-mrl property which gets/sets the current MRL
	that Totem is playing

	* configure.in:
	* src/plugins/thumbnail/*: Add the thumbnail plugin to show