@@ -1,5 +1,12 @@
 2008-01-30  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-video-thumbnailer.c: (save_pixbuf),
+	(capture_interesting_frame), (main): Fix typos in the
+	(untranslated) error messages, patch from Wouter Bron
+	<wousser@gmail.com> (Closes: #513125)
+
+2008-01-30  Bastien Nocera  <hadess@hadess.net>
+
 	* bindings/vala/totem.vapi:
 	* configure.in: Fix compilation with vala 0.1.6, spotted
 	by Götz Waschk <waschk@mandriva.org> (Closes: #512920)
